# HTWKVision

./: CMakeLists.txt  README.md  RoboCupGameControlData.h  algorithm_ext.h  async.h  ball_classifier_upper_cam.cpp  ball_classifier_upper_cam.h  ball_detector.cpp  ball_detector.h  ball_detector_II.cpp  ball_detector_II.h  ball_detector_legacy.cpp  ball_detector_legacy.h  ball_feature_extractor.cpp  ball_feature_extractor.h  ball_pre_classifier_upper_cam.cpp  ball_pre_classifier_upper_cam.h  base_detector.h  booloption.cpp  booloption.h  bounding_box.h  cam_constants.h  cam_offset.cpp  cam_offset.h  cam_pose.cpp  cam_pose.h  classifier.cpp  classifier.h  color.h  coord.h  ellifit.cpp  ellifit.h  ellipse.h  enumoption.cpp  enumoption.h  ext_math.h  feet_detector.cpp  feet_detector.h  field_border_detector.cpp  field_border_detector.h  (+129 more)
benchmark/: CMakeLists.txt  create_integral_image.cpp  create_integral_image.h  create_integral_image_config.h  create_integral_image_naive.cpp  create_integral_image_naive.h  create_integral_image_naive_unrolled.cpp  create_integral_image_naive_unrolled.h  create_integral_image_planar_yuv.cpp  create_integral_image_planar_yuv.h  create_integral_image_sse.cpp  create_integral_image_sse.h  create_integral_image_two_rows.cpp  create_integral_image_two_rows.h  image.yuv422  memcpy_speed.cpp  memcpy_speed.h  planar_yuv.cpp  planar_yuv.h
cmake/: FindCppUnit.cmake
data/: net_1+3F_GOALL2015_do0.5_hidden16_bs45000_bi64_iter1000_l2.0E-5.net  net_1to2F+Mirror+Artefact_IRAN_do0.5_hidden16_bs45000_bi64_iter1000_l2.0E-5.net  net_Robots_IntegralRectsD2_do0.5_hidden4_bs3000_bi64_iter1000_l1.0E-6.net  net_Robots_Martin_1P2N+Small_do0.5_hidden4_bs3000_bi64_iter1000_l1.0E-6.net  net_WhiteGoal_15FeaturesMirror_do0.5_hidden8_bs3000_bi64_iter1000_l1.0E-6.net  object_classifier_runtime.prototxt
demo/: CMakeLists.txt  demo.cpp  scaled_image_writer.cpp
easy/: profiler.h  serialized_block.h
images/: ChinaTest2015GAB03B_AnyBallTest3_00049806_U.png.result  ChinaTest2015GAB03B_AnyBallTest3_00051659_U.png.result  ChinaTest2015GAB03B_AnyBallTest3_00070111_U.png.result
include/: exponential_moving_average.h  ext_math.h  fast_math.h
libhtwkimagetools/: CMakeLists.txt  htwkcolorconversion.cpp  htwkcolorconversion.h  htwkpngimageprovider.cpp  htwkpngimageprovider.h  htwkpngimagesaver.cpp  htwkpngimagesaver.h  htwkrgbaimage.cpp  htwkrgbaimage.h  htwkyuv422image.cpp  htwkyuv422image.h
libhtwkimagetools/internal/: htwkpngimageproviderlibpng.cpp  htwkpngimageproviderlibpng.h  htwkpngimageproviderlodepng.cpp  htwkpngimageproviderlodepng.h  htwkpngimagesaverlibpng.cpp  htwkpngimagesaverlibpng.h  htwkpngimagesaverlodepng.cpp  htwkpngimagesaverlodepng.h
lodepng/: CMakeLists.txt  lodepng.cpp  lodepng.h
neuralnet/: CMakeLists.txt  classifier.cpp  classifier.h  classifier_relu.cpp  classifier_relu.h  convolutions.cpp  convolutions.h  layer.h  layer_activations.h  pooling_result.h
tests/: CMakeLists.txt  htwkvisiontests.cpp  htwkvisiontests.h  main.cpp  testfilecreator.cpp  testimagedata.cpp  testimagedata.h  testimageloader.cpp  testimageloader.h  testutils.cpp  testutils.h
tests/messages/: CMakeLists.txt  visionresult.proto
tflite/: README  tflite_c_api.h  tflite_c_api_common.h  tflite_c_api_types.h  tflite_c_api_xnnpack_delegate.h
tflite-benchmark/: CMakeLists.txt  tflite-benchmark.cpp
tfliteexecuter/: CMakeLists.txt  tfliteexecuter.cpp  tfliteexecuter.h
